<resources>
    <string name="app_name">Simple Budget</string>
    <string name="title_history">History</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_statistic">Statistics</string>
    <string name="settings">Settings</string>
    <string name="amount_input_hint">Amount</string>
    <string name="description_input_hint">Description</string>
    <string name="add_expense_title">Add/edit expenses</string>
    <string name="no_category_warning">Please select a category!</string>
    <string name="no_amount_warning">Please specify an amount!</string>
    <string name="menu_history_search">Search</string>
    <string name="menu_history_filter">Filter</string>
    <string name="today">Today</string>
    <string name="yesterday">Yesterday</string>
    <string name="edit">Edit</string>
    <string name="delete">Delete</string>
    <string name="delete_expenses_message">Do you want to delete all selected expenses?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="filter_fragment_expense_type_textview">Entry type</string>
    <string name="filter_fragment_daterange_textview">Date range</string>
    <string name="about_app">About the app</string>
    <string name="about_version">Version</string>
    <string name="cancel">Cancel</string>
    <string name="reset">Reset</string>
    <string name="dashboard_time_selection">Summary for</string>
    <string name="expenses">Expenses</string>
    <string name="balance">Balance</string>
    <string name="dashboard_income">Income</string>
    <string name="licenses">Licenses</string>
    <string name="budget">Budget</string>
    <string name="income_manager_title">Regular income/expenses</string>
    <string name="manage_categories_titel">Manage categories</string>
    <string name="this_week">This week</string>
    <string name="last_week">Last week</string>
    <string name="this_month">This month</string>
    <string name="this_quarter">This quarter</string>
    <string name="first_quarter">1st quarter</string>
    <string name="second_quarter">2nd quarter</string>
    <string name="third_quarter">3rd quarter</string>
    <string name="fourth_quarter">4th quarter</string>
    <string name="default_value">0.00 $</string>
    <string name="currency">Currency</string>
    <string name="settings_currency_custom">Custom currency symbol</string>
    <string name="settings_currency_before_amount">Currency symbol before amount</string>
    <string name="settings_currency_no_decimal">No decimal values</string>
    <string name="settings_currency_dialog_titel">Choose your currency</string>
    <string name="ok">OK</string>
    <string name="no_currency_selected">Please select a currency!</string>
    <string name="add">Add</string>
    <string name="category_name">Category name</string>
    <string name="select_icon">Select icon:</string>
    <string name="add_edit_category_dialog_titel">Add/Edit Category</string>
    <string name="migrate_expenses_message">Choose a category to migrate existing expenses to. If you choose none, all expenses in the category will be deleted!</string>
    <string name="none">None</string>
    <string name="migrate_to_category">Migrate to category:</string>
    <string name="delete_category">Delete category?</string>
    <string name="choose_categories">Choose category:</string>
    <string name="add_recurrent_entry_title">Add recurrent income/expense</string>
    <string name="edit_recurrent_entry_title">Edit recurrent income/expense</string>
    <string name="date">Date</string>
    <string name="both">Both</string>
    <string name="income">Income</string>
    <string name="last30days">Last 30 days</string>
    <string name="last90days">Last 90 days</string>
    <string name="this_year">This year</string>
    <string name="all_time">All time</string>
    <string name="specific_range">Specific range</string>
    <string name="filter_fragment_category_textview">Filter categories</string>
    <string name="to">To</string>
    <string name="from">From</string>
    <string name="from_after_to_error">Date is after last date!</string>
    <string name="to_before_from_error">Date is before first date!</string>
    <string name="start_date_hint">Starting from</string>
    <string name="interval">Interval</string>
    <string name="delete_regular_income_expense">Delete regular income/expense?</string>
    <string name="delete_regular_income_expense_message">You can stop the income/expense from occurring in the future or delete also entries from the past</string>
    <string name="stop_in_future">Stop</string>
    <string name="delete_all">Delete all</string>
    <string name="every">Every</string>
    <string name="of_month">day of month</string>
    <string name="this_is_recurrent_entry">This is a recurrent entry</string>
    <string name="this_is_recurrent_entry_message">If you want to change recurrent entries, use the regular income/expense manager</string>
    <string name="dont_show_again">Don\'t show this again</string>
    <string name="dialog_budget_title">Set budget for</string>
    <string name="dialog_budget_message">To remove a budget set it to</string>
    <string name="total_budget">Total budget</string>
    <string name="dialog_budget_total_title">Set total budget</string>
    <string name="no_budget_set_info">Click to set budget</string>
    <string name="no_budget_set_info_short">No budget</string>
    <string name="distribution">Distribution</string>
    <string name="other">Other</string>
    <string name="total_expenses">Total expenses</string>
    <string name="setup_dialog_title">Initial setup</string>
    <string name="choose_currency">Select your currency:\n</string>
    <string name="currency_default">Dollar $</string>
    <string name="monday">Monday</string>
    <string name="sunday">Sunday</string>
    <string name="empty_pie_message">Nothing to show here!\n\n Add expenses by clicking the button below</string>
    <string name="empty_income_list_message">Nothing to show here!\n\nAdd regular income/expenses by pressing the + button</string>
    <string name="empty_history_view_message">Nothing to show here!\n\nChange filter/search criteria\nor add expenses</string>
    <string name="empty_budget_stat_msg">Nothing to show here!\n\nAdd a budget to at least three categories</string>
    <string name="empty_total_budget_stat_msg">Nothing to show here!\n\nPlease set a total budget in the dashboard</string>
    <string name="select_interval">Select interval:</string>
    <string name="weekly_long">Weekly</string>
    <string name="monthly_long">Monthly</string>
    <string name="quarterly">Quarterly</string>
    <string name="yearly">Yearly</string>
    <string name="summary">Summary</string>
    <string name="monthly">Monthly</string>
    <string name="weekly">Weekly</string>
    <string name="set_budget">Set budget</string>
    <string name="running_charges">Running charges</string>
    <string name="variable_expenses">Variable expenses</string>
    <string name="running_charges_title">Running / variable expenses</string>
    <string name="budget_by_category">Budget for selected interval</string>
    <string name="by_month">for last 12 months</string>
    <string name="by_week">for last 26 weeks</string>
    <string name="settings_history_grouping">Grouping in History and Widget</string>
    <string name="settings_start_week_sunday">Start week on Sunday instead of Monday</string>
    <string name="about_send_feedback_summary">Have any questions or problems? Let me know</string>
    <string name="about_send_feedback_title">Send feedback</string>
    <string name="about_rate_app_summary">Give the app 5 stars if you like it.</string>
    <string name="about_rate_app_title">Rate the app!</string>
    <string name="about_other_apps_title">Check out my other apps</string>
    <string name="about_sourcecode_summary">View the sourcecode on my GitHub repo</string>
    <string name="about_sourcecode_title">Sourcecode</string>
    <string name="summary_about">A simple and straightforward App for handling your finances</string>
    <string name="general_settings">General settings</string>
    <string name="dont_show_again_settings">Don\'t show dialog in history</string>
    <string name="dont_show_again_settings_message">Don\'t show info dialog about selecting recurring income/expense</string>
    <string name="choose_week_start">Choose first day of week:</string>
    <string name="show_recurring_symbol">Indicate recurrent entries with symbol (\u27F3)</string>
    <string name="backup">Backup</string>
    <string name="reset_database">Reset database</string>
    <string name="import_expenses">Import expenses</string>
    <string name="dialog_db_reset_title">Reset whole database?</string>
    <string name="dialog_db_reset_message">WARNING THIS WILL DELETE EVERYTHING!!!</string>
    <string name="fallback_category_name">default</string>
    <string name="invalid_file">Invalid file</string>
    <string name="import_successful">
        Import successful\n\n
        Imported expenses: %d\n
        Omitted %d duplicate expenses\n\n
        Imported categories: %d\n
        Omitted %d duplicate categories
    </string>
    <string name="import_corrupted">
        Import corrupted\n\n
        Imported expenses: %d\n
        Omitted %d duplicate expenses\n\n
        Imported categories: %d\n
        Omitted %d duplicate categories\n\n
        %d expenses where corrupted\n
        %d categories where corrupted       "</string>
    <string name="corrupted_lines">The following lines are corrupted:\n</string>
    <string name="select_directory">Select a directory</string>
    <string name="import_expenses_summary">Duplicate entries will not be imported. It is recommended to reset the database before importing</string>
    <string name="export_successful">Export was successful</string>
    <string name="export_unsuccessful">An error occurred. Export was not successful</string>
    <string name="import_report">Summary for import:</string>
    <string name="invalid_file_message">This file cannot be imported, because it is not a valid SimpleBudget file</string>
    <string name="setup_dialog_tip">When adding expenses/income, a positive amount denotes a expense and a negative amount an income.</string>
    <string-array name="default_categories">
        <item>Food</item>
        <item>Transportation</item>
        <item>Health</item>
        <item>Shopping</item>
        <item>Housing</item>
        <item>Travel</item>
        <item>Leisure</item>
    </string-array>
    <string-array name="history_grouping_interval">
        <item>Monthly</item>
        <item>Weekly</item>
    </string-array>
    <string-array name="history_grouping_interval_values">
        <item>1</item>
        <item>0</item>
    </string-array>
    <string name="about_version_number_key" translatable="false">version_number_key</string>
    <string name="key_send_feedback" translatable="false">send_feedback</string>
    <string name="about_rate_app_key" translatable="false">rate_app</string>
    <string name="about_other_apps_key" translatable="false">other_apps_key</string>
    <string name="licenses_key" translatable="false">licenses_key</string>
</resources>