<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright 2019 Korbinian Moser
  ~
  ~ Licensed under the BSD 3-Clause License (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~ https://opensource.org/licenses/BSD-3-Clause
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->

<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_history"
        android:icon="@drawable/ic_history_white_24dp"
        android:title="@string/title_history" />

    <item
        android:id="@+id/navigation_dashboard"
        android:icon="@drawable/ic_dashboard_white_24dp"
        android:title="@string/title_dashboard" />

    <item
        android:id="@+id/navigation_statistic"
        android:icon="@drawable/ic_statistic_white_24dp"
        android:title="@string/title_statistic" />

</menu>
