<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright 2019 Korbinian Moser
  ~
  ~ Licensed under the BSD 3-Clause License (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~ https://opensource.org/licenses/BSD-3-Clause
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingTop="18dp"
    android:paddingStart="24dp"
    android:paddingEnd="24dp"
    android:paddingBottom="8dp">

    <com.google.android.material.button.MaterialButton
        android:id="@+id/setup_currency_choose_currency_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/choose_currency"
        android:textSize="14sp"
        android:textColor="@color/text_color_white"
        android:textStyle="normal"
        android:layout_marginBottom="8dp"
        style="@style/Widget.MaterialComponents.Button.UnelevatedButton"/>

    <View
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:layout_marginBottom="8dp"
        android:layout_marginTop="8dp"
        android:background="@android:color/darker_gray"
        android:layout_gravity="bottom" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/settings_history_grouping"/>

    <com.google.android.material.chip.ChipGroup
        android:id="@+id/setup_interval_group"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        app:checkedChip="@id/chip_monthly"
        app:singleSelection="true">

        <com.google.android.material.chip.Chip
            android:id="@+id/chip_monthly"
            android:text="@string/monthly"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@android:color/white"
            app:chipBackgroundColor="@color/custom_choice_chip_selector"
            style="@style/Widget.MaterialComponents.Chip.Choice"/>

        <com.google.android.material.chip.Chip
            android:id="@+id/chip_weekly"
            android:text="@string/weekly"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@android:color/white"
            app:chipBackgroundColor="@color/custom_choice_chip_selector"
            style="@style/Widget.MaterialComponents.Chip.Choice"/>

    </com.google.android.material.chip.ChipGroup>

    <View
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:layout_marginBottom="8dp"
        android:layout_marginTop="8dp"
        android:background="@android:color/darker_gray"
        android:layout_gravity="bottom" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/choose_week_start"/>

    <com.google.android.material.chip.ChipGroup
        android:id="@+id/setup_week_start_group"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:checkedChip="@id/chip_monday"
        app:singleSelection="true">

        <com.google.android.material.chip.Chip
            android:id="@+id/chip_monday"
            android:text="@string/monday"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@android:color/white"
            app:chipBackgroundColor="@color/custom_choice_chip_selector"
            style="@style/Widget.MaterialComponents.Chip.Choice"/>

        <com.google.android.material.chip.Chip
            android:id="@+id/chip_sunday"
            android:text="@string/sunday"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@android:color/white"
            app:chipBackgroundColor="@color/custom_choice_chip_selector"
            style="@style/Widget.MaterialComponents.Chip.Choice"/>

    </com.google.android.material.chip.ChipGroup>

    <TextView
        android:layout_marginTop="16dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/setup_dialog_tip"/>

</LinearLayout>