<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright 2019 Korbinian Moser
  ~
  ~ Licensed under the BSD 3-Clause License (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~ https://opensource.org/licenses/BSD-3-Clause
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="20dp">

    <Spinner
        android:id="@+id/settings_currency_spinner"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:entries="@array/currencies_with_names"/>

    <EditText
        android:id="@+id/settings_currency_custom"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/settings_currency_custom"
        tools:ignore="Autofill"
        android:inputType="text" />

    <CheckBox
        android:id="@+id/settings_currency_before_amount"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/settings_currency_before_amount"/>

    <CheckBox
        android:id="@+id/settings_currency_decimal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/settings_currency_no_decimal"/>

</LinearLayout>